[project]
name = "uvproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.6",
    "google-search-results>=2.4.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "openai>=1.0.0",
    "requests>=2.32.5",
]
